--- a/quiz.html
+++ b/quiz.html
@@ -22,8 +22,8 @@
             <p><label for="email">E-mail address</label></p>
             <p><input type="email" id="email" placeholder="mail@address.com" id="contraseña" required></p>
   
-            <p><label for="password">Password</label></p>
-            <p><input type="password" id="1234" placeholder="password"></p>
+            <p><label for="password"></label></p>
+            <p><input type="password" id="1234" placeholder="password" required></p>
   
             <p><input type="submit" value="Sign In"></p>
   
